<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.QuizQuestionsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/size_16dp">

        <TextView
            android:id="@+id/tv_total_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size_8dp"
            android:gravity="end"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size_16sp"
            tools:text="Score 5/10" />

        <TextView
            android:id="@+id/tv_question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size_8dp"
            android:gravity="center"
            android:text="@string/question"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_22sp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_16dp"
                android:src="@drawable/ic_transparent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/colorPrimary" />

            <LinearLayout
                android:id="@+id/ll_start_timer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/game_start_in"
                    android:textSize="@dimen/text_size_24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_start_timer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/countdown_timer"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/text_size_32sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/ll_progress_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:progressBarStyleHorizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:indeterminate="false"
                android:max="10"
                android:minHeight="@dimen/size_50dp"
                android:progress="0" />

            <TextView
                android:id="@+id/tv_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/size_16dp"
                android:text="@string/progress_tracker"
                android:textSize="@dimen/text_size_14sp" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size_8dp"
            android:background="@color/colorPrimary"
            android:text="@string/submit"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_18sp"
            android:textStyle="bold" />

    </LinearLayout>
</ScrollView>